--- a/.github/workflows/gha_kafka.yml
+++ b/.github/workflows/gha_kafka.yml
@@ -4,7 +4,7 @@ on:
     types: [gha-kafka]
 
 jobs:
-  match-bet:
+  async_job:
     runs-on: self-hosted
     steps:
     - name: Trigger kafka listener
