--- a/.github/workflows/gha_kafka.yml
+++ b/.github/workflows/gha_kafka.yml
@@ -8,5 +8,5 @@ jobs:
     runs-on: self-hosted
     steps:
     - name: Trigger kafka listener
-      run: |
-        python3 /home/ec2-user/listener.py
+      run: python3 /home/ec2-user/listener.py
+      shell: bash
