--- a/.github/workflows/gha_kafka.yml
+++ b/.github/workflows/gha_kafka.yml
@@ -7,6 +7,9 @@ jobs:
   async_job:
     runs-on: self-hosted
     steps:
+    - name: Hit Async Api
+      run: echo "https://async.api.com/create/${{ github.event.client_payload.id }}"
+      
     - name: Trigger kafka listener
-      run: python3 /home/ec2-user/listener.py
+      run: python3 /home/ec2-user/listener.py github.event.client_payload.id
       shell: bash
