--- a/.github/workflows/gha_kafka.yml
+++ b/.github/workflows/gha_kafka.yml
@@ -11,5 +11,5 @@ jobs:
       run: echo "https://async.api.com/create/${{ github.event.client_payload.id }}"
       
     - name: Trigger kafka listener
-      run: python3 /home/ec2-user/listener.py github.event.client_payload.id
+      run: python3 /home/ec2-user/listener.py {{ github.event.client_payload.id }}
       shell: bash
