--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -16,3 +16,16 @@ jobs:
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
+
+  set_aync_job_status:
+    runs-on: self-hosted
+    name: async_job
+    steps:
+      - name: Set async job status step
+        id: async_step
+        uses: BlackHat786000/set-async-job-status@v1.1
+        with:
+          broker: '65.2.151.189:9092'
+          topic: 'myFirstJsonTopic'
+          id: 123
+          timeout: 5
