--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -27,5 +27,5 @@ jobs:
         with:
           broker_url: '65.2.151.189:9092'
           topic_name: 'myFirstJsonTopic'
-          job_id: 123
+          job_id: '123'
           listener_timeout: 5
