--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -26,6 +26,6 @@ jobs:
         uses: BlackHat786000/set-async-job-status@v2.4
         with:
           broker_url: '65.2.151.189:9092'
-          topic_name: 'myFirstJsonTopicx'
+          topic_name: 'myFirstJsonTopic'
           job_id: '123'
           listener_timeout: 5
