--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -1,22 +1,18 @@
-name: Demo workflow to set async job status based on event
-
+name: Demo workflow using hello-world custom action
 on:
   repository_dispatch:
-    types: [async-job]
+    types: [hello-world]
 
 jobs:
-  set_aync_job_status:
+  hello_world_job:
     runs-on: self-hosted
-    name: async_job
+    name: A job to say hello
     steps:
-      - name: Print job ID
-        run: echo "Current job ID is ${{ github.job }}"
-      
-      - name: Set async job status step
-        id: async_step
-        uses: BlackHat786000/set-async-job-status@v2.7
+      - name: Hello world action step
+        id: hello
+        uses: BlackHat786000/hello-world-javascript-action@v1.1
         with:
-          kafka_broker: '65.2.151.189:9092'
-          topic_name: 'myFirstJsonTopic'
-          job_id: ${{ github.job }}
-          listener_timeout: 5
+          who-to-greet: 'Udit Yadav'
+      # Use the output from the `hello` step
+      - name: Get the output time
+        run: echo "The time was ${{ steps.hello.outputs.time }}"
