--- a/.github/workflows/async_job.yml
+++ b/.github/workflows/async_job.yml
@@ -20,5 +20,7 @@ jobs:
         id: async_step
         uses: BlackHat786000/set-async-job-status@v3.0
         with:
+          kafka_broker: '65.2.151.189:9092'
           topic_name: 'myFirstJsonTopic'
           job_id: ${{ steps.random_job_id.outputs.job_id }}
+          listener_timeout: 5
