--- a/.github/workflows/async_job.yml
+++ b/.github/workflows/async_job.yml
@@ -18,7 +18,7 @@ jobs:
       
       - name: Set async job status step
         id: async_step
-        uses: BlackHat786000/test@v1.2
+        uses: BlackHat786000/set-async-job-status@v3.1
         with:
           kafka_broker: '65.2.151.189:9092'
           topic_name: 'myFirstJsonTopic'
